add statement page

--- a/document.tex
+++ b/document.tex
@@ -40,7 +40,7 @@
 
 \thispagestyle{empty}
 \input{frontmatter/frontpage_eng}               % 英文标题页
-\newpage\clearpage
+\newpage\thispagestyle{empty}\cleardoublepage
 %------------------------------------------------------------------------------%
 % 设置页码与文档格式                                                           %
 %------------------------------------------------------------------------------%
@@ -104,4 +104,5 @@
 \input{backmatter/appendix}                     % 附录
 \input{backmatter/acknowledgements}             % 致谢
 \input{backmatter/mywork}                       % 参加科研情况
+\input{backmatter/statement.tex}                % 知识产权与原创性声明
 \end{document}
