--- a/references/reference.bib
+++ b/references/reference.bib
@@ -16,7 +16,7 @@
   year      = {1986}
 }
 
-@book{lamport1989latex:,
+@book{lamport1989latex,
   title     = {{{\LaTeX}}: a document preparation system},
   author    = {Lamport, Leslie},
   publisher = {Addison-Wesley Professional},
@@ -27,7 +27,7 @@
 @article{szegedy2015going,
   title   = {Going deeper with convolutions},
   author  = {Szegedy, Christian and Liu, Wei and Jia, Yangqing and Sermanet, Pierre and Reed, Scott E and Anguelov, Dragomir and Erhan, Dumitru and Vanhoucke, Vincent and Rabinovich, Andrew},
-  journal = {computer vision and pattern recognition},
+  journal = {Computer Vision and Pattern Recognition},
   pages   = {1--9},
   year    = {2015}
 }
@@ -43,13 +43,23 @@
   url       = {https://doi.org/10.5281/zenodo.4120375}
 }
 
-@article{npuSource,
-	title="脉源三支 强强融合——西北工业大学",
-	author=" {陈家忠}",
-	journal="电子技术与软件工程",
-	number="9",
-	pages="15--16",
-	notes="Sourced from Microsoft Academic - https://academic.microsoft.com/paper/1129571904",
-	year="2014"
+@article{chen2014maiyuan,
+  title   = {脉源三支 强强融合——西北工业大学},
+  author  = { {陈家忠}},
+  journal = {电子技术与软件工程},
+  number  = {9},
+  pages   = {15--16},
+  notes   = {Sourced from Microsoft Academic - https://academic.microsoft.com/paper/1129571904},
+  year    = {2014}
 }
 
+@article{shen2021peridynamic,
+  title     = {Peridynamic modeling with energy-based surface correction for fracture simulation of random porous materials},
+  journal   = {Theoretical and Applied Fracture Mechanics},
+  volume    = {114},
+  pages     = {102987},
+  year      = {2021},
+  issn      = {0167-8442},
+  author    = {Shangkun Shen and Zihao Yang and Fei Han and Junzhi Cui and Jieqiong Zhang},
+  publisher = {Elsevier}
+}
