--- a/document.tex
+++ b/document.tex
@@ -13,6 +13,11 @@
 % 仅用于测试
 \usepackage{blindtext}
 
+
+%------------------------------------------------------------------------------%
+% 硕士请取消下面的注释                                                         %
+%------------------------------------------------------------------------------%
+% \fancyhead[CEH]{西北工业大学硕士学位论文}           % 硕士请修改此处
 %------------------------------------------------------------------------------%
 % 标题、作者、送审日期                                                         %
 %------------------------------------------------------------------------------%
