--- a/frontmatter/frontpage_eng.tex
+++ b/frontmatter/frontpage_eng.tex
@@ -26,7 +26,7 @@
 			\fTNR In partial fulfillment of the requirement \\
 			\fTNR For the degree of \\
 			%% please change to PHD if you want
-			\fTNR Master/Doctor of \textbf{Metaphysics}
+			\fTNR Doctor of \textbf{Metaphysics} % 硕士请修改此处
 			\fSong \sXiaosan ~ \\
 			\fSong \sXiaosan ~ \\
 			\fSong \sXiaosan ~ \\
