--- a/frontmatter/frontpage_chs.tex
+++ b/frontmatter/frontpage_chs.tex
@@ -4,7 +4,7 @@
 		\begin{center}
 			\begin{center}
 				\sSanhao 西~北~工~业~大~学 \\
-				\sYihao 硕~士~学~位~论~文 \\
+				\sYihao 博~士~学~位~论~文 \\ % 硕士请修改此处
 				\sSihao （学位研究生）\\
 			\end{center}
 			\fSong \sSihao ~ \\
