--- a/document.tex
+++ b/document.tex
@@ -105,9 +105,11 @@
 %------------------------------------------------------------------------------%
 % 附录                                                                         %
 %------------------------------------------------------------------------------%
+\thesisappendix
+\input{backmatter/appendix_A}                   % 附录 A
+\input{backmatter/appendix_B}                   % 附录 B
 \backmatter
-\input{backmatter/appendix}                     % 附录
 \input{backmatter/acknowledgements}             % 致谢
 \input{backmatter/mywork}                       % 参加科研情况
-\input{backmatter/statement.tex}                % 知识产权与原创性声明
+\input{backmatter/statement}                    % 知识产权与原创性声明
 \end{document}
